--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
       <tbody>
         <tr>
           <td>2015-2019</td>
-          <td>Thaizone Manager</td>
+          <td>Pro wok master</td>
         </tr>
         <tr>
           <td>2019-2020</td>
-          <td>Rogers Salesman</td>
+          <td>Rogers Sales Legend</td>
         </tr>
         <tr>
           <td>2020-today</td>
-          <td>Nina Pizza</td>
+          <td>Nina Pizza Top Boiii</td>
         </tr>
       </tbody>
     </table>
