--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tony's Site ♥</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <table cellspacing="20">
@@ -27,14 +28,14 @@
         </td>
       </tr>
     </table>
-    <hr size="3" />
+    <hr />
     <h3>Books and teaching</h3>
     <ul>
       <li>Camus, L'Etrange.</li>
       <li>Despantes, Vernon Subutex</li>
     </ul>
 
-    <hr size="3" />
+    <hr />
     <h3>Work Experience</h3>
     <table cellspacing="20">
       <thead>
@@ -46,20 +47,20 @@
       <tbody>
         <tr>
           <td>2015-2019</td>
-          <td>Pro wok master</td>
+          <td>Thaizone Manager</td>
         </tr>
         <tr>
           <td>2019-2020</td>
-          <td>Rogers Sales Legend</td>
+          <td>Rogers Salesman</td>
         </tr>
         <tr>
           <td>2020-today</td>
-          <td>Nina Pizza Top Boiii</td>
+          <td>Nina Pizza</td>
         </tr>
       </tbody>
     </table>
 
-    <hr size="3" />
+    <hr />
     <h3>Skills</h3>
     <table cellspacing="20">
       <tr>
@@ -102,7 +103,7 @@
       </tr>
     </table>
 
-    <hr size="3" />
+    <hr />
     <a href="hobbies.html">My Hobbies</a>
     <br />
     <br />
